--- a/app.css
+++ b/app.css
@@ -1,3 +1,69 @@
 body {
-    color : red;
+    background-color: #EC1A1A;
+    margin: 0;
+    font-family: 'Press Start 2P', cursive;
+    color: white;
+}
+
+.card:hover {
+    animation: bounce 0.5s linear;
+}
+
+@keyframes bounce {
+    20%{
+        transform: translateY(-8px);
+    }
+    40%{
+        transform: translateY(0px);
+    }
+    60%{
+        transform: translateY(-4px);
+    }
+    80%{
+        transform: translateY(-0px);
+    }
+}
+
+.card {
+    list-style: none;
+    padding: 40px;
+    background: #f4f4f4;
+    color: #222;
+    text-align: center;
+}
+
+.card-title {
+    text-transform: uppercase;
+    font-size: 17px;
+    font-weight: normal;
+    margin-bottom: 0;
+}
+
+.card-subtitle {
+    font-size: 11px;
+    font-weight: lighter;
+    color: #666;
+    margin-top: 5xp;
+}
+
+.card-image {
+    height: 180px;
+}
+
+#pokedex {
+    padding-inline-start: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 20px;
+}
+
+.container {
+    padding: 40px;
+    margin: 0 auto;
+}
+
+h1 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 45px;
 }
